<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/calculatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_pgoto"

    tools:context=".CalculatorActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="388dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:isScrollContainer="true"
        app:layout_constraintBottom_toTopOf="@+id/Backbutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:isScrollContainer="true"
            android:scrollbars="vertical">

            <TextView
                android:id="@+id/dateTView"
                android:layout_width="96dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/entry_date"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/dateEText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:ems="10"
                android:inputType="text|datetime|date" />

            <TextView
                android:id="@+id/showerTView"
                android:layout_width="96dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/shower"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/ShowerEText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:ems="10"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/toiletTView"
                android:layout_width="96dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/toilet"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/toiletEText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:ems="10"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/hygieneTView"
                android:layout_width="96dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/hygiene"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/hydieneEText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:ems="10"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/laundyTView"
                android:layout_width="96dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/laundry"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/laundryEText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:ems="10"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/dishesTView"
                android:layout_width="96dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/dishes"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/dishesEText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:ems="10"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/cookingTView"
                android:layout_width="96dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/cooking"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/cookingEText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:ems="10"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/cleaningTView"
                android:layout_width="96dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/cleaning"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/cleaningEText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:ems="10"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/otherTView"
                android:layout_width="96dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/other"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/otherEText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:ems="10"
                android:inputType="numberDecimal" />

        </GridLayout>
    </ScrollView>

    <Button
        android:id="@+id/Backbutton"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:onClick="onBackClick"
        android:text="@string/Back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/Submitbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_entry"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</android.support.constraint.ConstraintLayout>